--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 #header {
   height: 100vh;
   width: 100;
-  background-image: url(/My_Portfolio/images/background.png);
+  background-image: url(/images/background.png);
   background-size: cover;
   background-position: center;
 }
